<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chakras"
    android:id="@+id/parentLayout"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

 <ImageButton
    android:id="@+id/btn_donate"
    android:background="@drawable/donate"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="invisible"
    android:layout_marginTop="20dp"
 android:layout_alignParentLeft="true"  
      android:text="@string/actionDonate" />

        <TextView
        android:id="@+id/tv_restartLabel"
        android:layout_below="@id/btn_donate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
     	
        android:layout_centerHorizontal="true"
        android:text="@string/restar_timer_label"
        android:visibility="invisible"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/background_dark"
        android:textSize="32dp" />
        
    <TextView
        android:id="@+id/tv_elapsedTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_below="@id/tv_restartLabel"
        android:layout_centerHorizontal="true"
        android:text="Time"
        android:textColor="@android:color/background_dark"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="50sp" />
    
    <LinearLayout
        android:id="@+id/layout_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_elapsedTime"
        android:layout_marginLeft="20sp"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/spn_min"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="0.3"
            android:drawSelectorOnTop="true"
            android:prompt="@string/selecTime"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_labelMin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.3"
            android:text="Min"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spn_sec"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.3"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_labelSec"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.3"
            android:text="Sec"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

<LinearLayout
    android:id="@+id/btn_container"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:layout_alignParentBottom="true"
    android:orientation="horizontal"
    android:weightSum="2" >
            <FrameLayout
            android:id="@+id/frame_start_pause_restart_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_start"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnStart"
                android:visibility="visible" />

            <Button
                android:id="@+id/btn_pause"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnPause"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_resume"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnresume"
                android:visibility="gone" />
        </FrameLayout>

    <Button
            android:id="@+id/btn_stop"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/btnStop"
            android:layout_height="wrap_content"
            android:visibility="visible" />
</LinearLayout>
 <!-- for inmobi -->

    <LinearLayout
        android:id="@+id/bannerLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_below="@id/btn_container"
        android:layout_alignParentBottom="true" >

         <com.inmobi.monetization.IMBanner
            android:id="@+id/banner"
            android:layout_width="320dp"
            android:layout_height="50dp"
            adSize="15"
            appId="@string/appId" />

    </LinearLayout>
   <!--  <Button
    android:id="@+id/btn_donate"
    android:background="@layout/mybutton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="invisible"
    android:layout_above="@id/btn_container"
    android:layout_alignParentRight="true" 
    android:layout_marginBottom="20sp"
       android:text="Donate" />-->
</RelativeLayout>